# xpp_fork

robots/xpp_eqr2/: CMakeLists.txt  package.xml
robots/xpp_eqr2/include/xpp_eqr2/: inverse_kinematics_eqr2.h
robots/xpp_eqr2/launch/: eqr2.launch
robots/xpp_eqr2/meshes/: antennas_1_lsensor.STL  antennas_2_lsensor.STL  d435i_1_lsensor.STL  d435i_2_lsensor.STL  d435i_3_lsensor.STL  d435i_4_lsensor.STL  fl_leg_l1.STL  fl_leg_l2.STL  fl_leg_l3.STL  fl_leg_lee.STL  fr_leg_l1.STL  fr_leg_l2.STL  fr_leg_l3.STL  fr_leg_lee.STL  hl_leg_l1.STL  hl_leg_l2.STL  hl_leg_l3.STL  hl_leg_lee.STL  hr_leg_l1.STL  hr_leg_l2.STL  hr_leg_l3.STL  hr_leg_lee.STL  laser_1_lsensor.STL  laser_2_lsensor.STL  laser_3_lsensor.STL  laser_4_lsensor.STL  rtk_1_lsensor.STL
robots/xpp_eqr2/src/: eqr2leg_inverse_kinematics.cc  inverse_kinematics_eqr2.cc
robots/xpp_eqr2/src/exe/: urdf_visualizer_eqr2.cc
robots/xpp_eqr2/urdf/: eqr2.urdf
robots/xpp_hyq/rviz/: xpp_hyq.rviz
xpp_examples/: CMakeLists.txt
xpp_examples/launch/: eqr2_test.launch
xpp_examples/rviz/: eqr2.rviz
xpp_examples/src/: eqr2_test.cc
